# kipo-platform

./: .env.example  .gitignore  .lintstagedrc.mjs  .npmrc  CLAUDE.md  DESIGN.md  PRODUCT.md  README.md  eslint.config.js  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json
src/apps/kipo-dashboard/backend/: main.py  pyproject.toml
src/apps/kipo-platform/: app.py  package.json  pyproject.toml
src/apps/kipo-platform/api/: __init__.py
src/apps/kipo-platform/api/v1/: __init__.py
src/apps/kipo-platform/auth/: commands.py  execute.py  gateway.py  identity.py  repository.py  token_rotation.py
src/apps/kipo-platform/auth/infrastructure/: exchange_code_repository.py  supabase_repository.py
src/apps/kipo-platform/auth/operations/: exchange_session.py  sign_in.py  sign_out.py  sign_up.py  (+1 more)
src/apps/kipo-platform/catalog/: catalog_types.py  commands.py  execute.py  repository.py
src/apps/kipo-platform/customer/: commands.py  customer.py  execute.py  repository.py
src/apps/kipo-platform/emisor/: commands.py  emisor.py  execute.py  pac_client.py  pdf_customization_constants.py  repository.py
src/apps/kipo-platform/invoice/: commands.py  execute.py  invoice.py  invoice_concept.py  repository.py
src/apps/kipo-platform/migrations/: add_stamp_purchases_table.sql
src/apps/kipo-platform/shared/: auth_decorators.py  config.py  cors.py  db_admin.py  exceptions.py  payment_gateway.py  providers.py  supabase.py
src/apps/kipo-platform/stamp_packs/: catalog.py  commands.py  execute.py  repository.py
src/apps/kipo-platform/subscriptions/: commands.py  execute.py  repository.py  subscription.py
src/apps/kipo-platform/tenant/: commands.py  execute.py  plan_catalog.py  repository.py  tenant.py
(+552 files in other folders)
