[project]
name = "kipo-api"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
  "flask>=3.0.0",
  "flask-cors>=5.0.0",
  "flask-sqlalchemy>=3.1.0",
  "supabase>=2.0.0",
  "psycopg2-binary>=2.9.0",
  "gunicorn>=21.0.0",
  "python-dotenv>=1.2.2",
  "ruff>=0.15.20",
  "requests>=2.34.2",
  "nh3>=0.2.0",
]

[tool.vercel]
entrypoint = "run:app"
