[project]
name = "kipo-api"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
  "flask>=3.0.0",
  "flask-cors>=5.0.0",
  "flask-sqlalchemy>=3.1.0",
  "supabase>=2.0.0",
  "psycopg2-binary>=2.9.0",
  "gunicorn>=21.0.0",
  "python-dotenv>=1.2.2",
  "ruff>=0.15.20",
  "requests>=2.34.2",
  "nh3>=0.2.0",
  "stripe>=11.0.0",
]

[tool.vercel]
entrypoint = "run:app"

[tool.ruff.lint.per-file-ignores]
# Blueprint packages define `x_bp = Blueprint(...)` then import endpoint
# modules for their route-registration side effects — the import position
# and the unused binding are both intentional here, not in app code.
"**/__init__.py" = ["E402", "F401"]
